CHATS_SIT/force-app/main/default/objects/T_INDIV_DSBLTY__c.object
<CustomObject>
    <description>Individual Disability Information</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_LENGTH_DSBLTY__c</fullName>
        <description>Incapacitation Length</description>
        <label>Incapacitation Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00328</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_LEVEL_SPCL__c</fullName>
        <label>Additional Care Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00694</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_DSBLTY_CHILD__c</fullName>
        <description>How Verified</description>
        <label>How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00693</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_DSBLTY__c</fullName>
        <description>Incapacitation Type</description>
        <label>Incapacitation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00327</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Incapacitation Reported Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Incapacitation Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_DUE_REVIEW__c</fullName>
        <description>Review Due Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Incapacitation End Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Incapacitation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Disability</relationshipLabel>
        <relationshipName>T_SBSD_INDIV6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_CC_GIVE_ABLE__c</fullName>
        <description>Able to take care of children?</description>
        <label>Able to take care of children?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_REQMT_WORK_MEET_ABLE__c</fullName>
        <description>Individual is able to meet the work requirement</description>
        <label>Individual can meet work requirement?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <label>Disability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Incapacitation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Incapacitation_End_Date_Validation</fullName>
        <active>true</active>
        <description>Incapacitation End Date must be greater than Incapacitation Reported Date.</description>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Incapacitation End Date must be greater than Incapacitation Reported Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_How_Verified_If_Verified_Type_V</fullName>
        <active>true</active>
        <description>Require How Verified if Verified Type equals Written Verification</description>
        <errorConditionFormula>AND(AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c)), ISPICKVAL(CDE_TYPE_VERIF__c, &quot;V&quot;)  , 
    ISBLANK(TEXT(CDE_SOURCE_DSBLTY_CHILD__c) ) )</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_DSBLTY_CHILD__c</errorDisplayField>
        <errorMessage>Require How Verified if Verified Type equals Written Verification</errorMessage>
    </validationRules>
</CustomObject>