CHATS_SIT/force-app/main/default/objects/T_INDIV_DSBLTY__c/validationRules/Incapacitation_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Incapacitation_End_Date_Validation</fullName>
    <active>true</active>
    <description>Incapacitation End Date must be greater than Incapacitation Reported Date.</description>
    <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Incapacitation End Date must be greater than Incapacitation Reported Date.</errorMessage>
</ValidationRule>