CHATS_SIT/force-app/main/default/objects/T_INDIV_DSBLTY__c/validationRules/Require_How_Verified_If_Verified_Type_V.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_How_Verified_If_Verified_Type_V</fullName>
    <active>true</active>
    <description>Require How Verified if Verified Type equals Written Verification</description>
    <errorConditionFormula>AND(AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c)), ISPICKVAL(CDE_TYPE_VERIF__c, &quot;V&quot;)  , 
    ISBLANK(TEXT(CDE_SOURCE_DSBLTY_CHILD__c) ) )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_DSBLTY_CHILD__c</errorDisplayField>
    <errorMessage>Require How Verified if Verified Type equals Written Verification</errorMessage>
</ValidationRule>